--- a/MessageService/packages.config
+++ b/MessageService/packages.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.AspNet.Cors" version="5.2.9" targetFramework="net481" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.9" targetFramework="net481" />
