Move assembly info to GreetingsConsole.csproj
Migrated assembly metadata from Properties/AssemblyInfo.cs to the project file following modern .NET conventions. Added AssemblyTitle, Description, Product, Copyright, AssemblyVersion, and FileVersion properties to the csproj file while removing the corresponding assembly attributes and comments from AssemblyInfo.cs. This consolidates project metadata in a single location and follows current .NET project structure best practices.

--- a/GreetingsConsole/GreetingsConsole.csproj
+++ b/GreetingsConsole/GreetingsConsole.csproj
@@ -2,6 +2,12 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <OutputType>Exe</OutputType>
+    <AssemblyTitle>GreetingsConsole</AssemblyTitle>
+    <Description>Console application that calls the MessageService REST API</Description>
+    <Product>GreetingsConsole</Product>
+    <Copyright>Copyright © 2025</Copyright>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
